--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 body {
-	background:url('../../assets/bg.jpg') repeat-x center;
+	background: #47418b;/*url('../../assets/bg.jpg') repeat-x center*/;
 	border:0;
 	padding:0;
 	margin:0;
